# meet-insights

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
data/sample_transcripts/: call_001_acme_corp.json  call_002_techstart.json  call_003_globalfin.json
src/: __init__.py  config.py
src/extractors/: __init__.py  insight_extractor.py
src/loaders/: __init__.py  chorus_api.py  file_loader.py
src/models/: __init__.py  insights.py  transcript.py
src/outputs/: __init__.py  google_docs.py  web_dashboard.py
src/utils/: __init__.py  deduplication.py
tests/: __init__.py  test_deduplication.py  test_loaders.py  test_models.py
web/templates/: dashboard.html
